Add Camera Feature

--- a/IRemember/res/values/strings.xml
+++ b/IRemember/res/values/strings.xml
@@ -8,20 +8,23 @@
     <string name="btAdd">ADD</string>
     <string name="etFilter">Text Filter</string>
     <string name="title_activity_add_screen">AddScreen</string>
-	<string name="title">Title</string>
-	<string name="body">Body</string>
-	<string name="addAudioLink">Audio Link</string>
-	<string name="AudioButton">Add Audio</string>
-	<string name="Addvideo">Video Link</string>
-	<string name="addVideoLink">Add Video</string>
-	<string name="imageName">Image Name</string>
-	<string name="btAddPhoto">Add Photo</string>
-	<string name="storyTime">Story Time</string>
-	<string name="clickText">Click Text To Set</string>
-	<string name="Location">Location</string>
-	<string name="btLocation">Get Location</string>
-	<string name="btCreate">Create</string>
-	<string name="btClear">Clear</string>
-	<string name="btCancel">Cancel</string>
-	<string name="location">0</string>
+    <string name="title">Title</string>
+    <string name="body">Body</string>
+    <string name="addAudioLink">Audio Link</string>
+    <string name="AudioButton">Add Audio</string>
+    <string name="Addvideo">Video Link</string>
+    <string name="addVideoLink">Add Video</string>
+    <string name="imageName">Image Name</string>
+    <string name="btAddPhoto">Add Photo</string>
+    <string name="storyTime">Story Time</string>
+    <string name="clickText">Click Text To Set</string>
+    <string name="Location">Location</string>
+    <string name="btLocation">Get Location</string>
+    <string name="btCreate">Create</string>
+    <string name="btClear">Clear</string>
+    <string name="btCancel">Cancel</string>
+    <string name="location">0</string>
+    <string name="title_activity_photo_capture">PhotoCapture</string>
+    <string name="btSaveImage">Save</string>
+
 </resources>
